modified:   index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 				<div class="container1">
 					<div class="row">
 						<div class="col-sm-12">
+
+                            <div class="clear-toggle"></div>
+							<div id="main-menu" class="collapse scroll navbar-center">
 								<ul class="nav">
 									<li class="active"> <a href="#home">HOME</a> </li>                          
                                     <!-- <li> <a href="https://veldhovenrp.gitbook.io/apv/">APV</a> </li>-->
